track user location

--- a/public/index.html
+++ b/public/index.html
@@ -51,6 +51,35 @@
         });
       }
       </script>
+      <script>
+        function search_nearme(){
+                    if (navigator.geolocation) {
+            navigator.geolocation.getCurrentPosition(function(position) {
+              var pos = {
+                lat: position.coords.latitude,
+                lng: position.coords.longitude
+              };
+              //console.log(pos);
+              
+              infoWindow.setPosition(pos);
+              infoWindow.setContent('Location found.'+ pos.lat+pos.lng);
+              map.setCenter(pos);
+            }, function() {
+              handleLocationError(true, infoWindow, map.getCenter());
+            });
+          } else {
+            // Browser doesn't support Geolocation
+            handleLocationError(false, infoWindow, map.getCenter());
+          }
+      
+        function handleLocationError(browserHasGeolocation, infoWindow, pos) {
+          infoWindow.setPosition(pos);
+          infoWindow.setContent(browserHasGeolocation ?
+                                'Error: The Geolocation service failed.' :
+                                'Error: Your browser doesn\'t support geolocation.');
+        }
+        }
+        </script>
     <style type="text/css">
       body,
       html {
@@ -69,7 +98,11 @@
 
   <body>
     <p>This will show all the hubway stations in Boston and Nearby areas.</p>
-    Stations near me (Radius 1 mile)<button onclick="search_stations()">Search</button>
+    Find station within : 
+    <input type="checkbox">1 Mile </input>
+    <input type="checkbox">2 Mile </input>
+    <input type="checkbox">3 Mile </input>
+    <button onclick="search_nearme()">Search</button>
     <!--<input type="button" name="near_me" value="Search" onclick="search_stations()"> </input>-->
     <div id="map"></div>
     <script>
