--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
   <!DOCTYPE html>
-  <html ng-app="hubway-app">
+  <html ng-app="hubway-tracker-app">
 
   <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
