--- a/index.html
+++ b/index.html
@@ -106,7 +106,9 @@
             <h1 style="color: white; !important">Hubway Tracker</h1>
             <h3 style="color: white; !important">Get the best out of city's best bikes!</h3>
             <br>
-            <a href="#about"style="color: black; !important" class="btn btn-lg btn-light">Find A Station</a>
+            <a href="#about"style="color: black; !important" class="btn btn-lg btn-light">Explore Tracking!</a>
+            <a href="#map"style="color: black; !important" class="btn btn-lg btn-light">Station Map</a>
+
         </div>
     </header>
 
@@ -247,6 +249,8 @@
       </iframe>-->
     </section>
 
+<section>
+<h3 style="text-align:center;">Tap on the marker at the station to see the bike statistics</h3></section>
     <!-- Footer -->
     <footer>
         <div class="container">
