--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
   <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDlgqVGfxHXAIg7wGni6UAz2Tnkewdi-i8&callback=initMap" async defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?&callback=initMap" async defer></script>
   <!-- <script src="require.js"></script>-->
     <!--<script src="main.js"></script>-->
     <!--<script> 
